# ps2-speedtests

./: .gitignore  Makefile  README.md  results.md  setup.md
cdread/: Makefile  main.c
complex/: Makefile  main.c
hostTests/HostTests/: CMakeLists.txt
hostTests/HostTests/GSTransferTests/: Baseline.cpp  CMakeLists.txt  GSTransferTests.cpp  GSTransferTests.h  SSEVersion.cpp  swizzle.txt
hostTests/HostTests/vcproj/: Host Tests.sln  Host Tests.vcxproj  Host Tests.vcxproj.filters
loops/: Makefile  loopMain.c
make/: Makefile.eeglobal
memory/: Makefile  memoryMain.c
